--- a/fundamentals of react/index.html
+++ b/fundamentals of react/index.html
@@ -8,10 +8,14 @@
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+
 </head>
 <body>
     <div id="root"></div>
 
-    <script src="script.js"></script>
+    <!-- <script src="script.js" type="text/babel"></script> -->
+    <!-- <script src="script2.js" type="text/babel"></script> -->
+    <script src="components.js" type="text/babel"></script>
 </body>
 </html>
